[package]
name = "lite-llm"
version = "0.1.0"
edition = "2021"
description = "Standalone Lite LLM integration skeleton crate."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/lite-llm/lite-llm"
authors = ["Lite LLM Developers <litellm@dust.llc>"]
rust-version = "1.70"

[dependencies]
