[package]
name = "lite-llm"
version = "0.1.0"
edition = "2021"
description = "Standalone Lite LLM integration skeleton crate."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/lite-llm/lite-llm"
authors = ["Lite LLM Developers <litellm@dust.llc>"]
rust-version = "1.70"

[dependencies]
lite-llm-runtime = { version = "0.1.0", path = "../lite-llm-runtime" }
lite-llm-distributed = { version = "0.1.0", path = "../lite-llm-distributed" }
lite-llm-storage = { version = "0.1.0", path = "../lite-llm-storage" }
lite-llm-training = { version = "0.1.0", path = "../lite-llm-training" }
lite-llm-inference = { version = "0.1.0", path = "../lite-llm-inference" }
lite-llm-security = { version = "0.1.0", path = "../lite-llm-security" }
